# goblet

./: .gitignore  GITHUB_PREP.md  MANUAL.md  PRD.md  README.md  index.html  pyproject.toml  run.py
.github/workflows/: pages.yml  tests.yml
docs/: bounded-legible-reasoning.md  browser_prd.md  cryptic-adventure-design.md  liars-labyrinth.md  liars.md  suspicion-and-puzzle-audit-goblet.md  witness-machine-interop-note.md
examples/: aster-bram.goblet-liars  cross-snare.goblet-liars  echo-pair.goblet-liars  free-third.goblet-liars  liars-labyrinth-demo.txt  open-liars-labyrinth-demo.bat  play-liars-labyrinth.bat  play-random-liars-labyrinth.bat  run-liars-labyrinth-demo.bat  self-snare.goblet-liars  single-claim.goblet-liars  three-witnesses.goblet-liars
reports/: handoff-report.md
src/goblet/: __init__.py  __main__.py  add.py  arithmetic.py  browser_session.py  compare.py  divide.py  fraction.py  increment.py  labyrinth.py  liars.py  multiply.py  normalize.py  prime.py  random_range.py  relation.py  render.py  subtract.py  words.py
tests/: test_browser_session.py  test_goblet.py  test_labyrinth.py  test_liars.py  test_no_cheating.py
web/: README.md  app.js  index.html  style.css
