[project]
name = "goblet"
version = "0.1.0"
description = "Symbolic English phrase arithmetic with bounded, legible uncertainty."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
  "symbolic-reasoning",
  "controlled-english",
  "bounded-reasoning",
  "uncertainty",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
goblet = "goblet.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
